# distribution_system

./: .gitignore  CMakeLists.txt  Makefile  README.md  auxiliary.c  auxiliary.h  c_process.c  c_process.h  ipc.c  ipc.h  k_process.c  k_process.h  lab_pack_script.sh  main.c  main_process.c  main_process.h  pa23.c  pa4.c  pa5.c  process.c  process.h  utils.c  utils.h
